--- a/src/.env
+++ b/src/.env
@@ -29,5 +29,5 @@ APP_SECRET=0bdf23f5e8d09c4d93c17e1d97a9db9f
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+DATABASE_URL=mysql://appuser:apppassword@127.0.0.1:3306/symfony?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
