--- a/src/composer.json
+++ b/src/composer.json
@@ -30,8 +30,9 @@
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
+        "liip/functional-test-bundle": "^4.1",
         "symfony/debug-pack": "*",
-        "symfony/maker-bundle": "^1.0",
+        "symfony/maker-bundle": "^1.18",
         "symfony/phpunit-bridge": "^5.0",
         "symfony/profiler-pack": "*",
         "symfony/test-pack": "*"
