--- a/src/composer.json
+++ b/src/composer.json
@@ -30,6 +30,7 @@
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^6.3",
         "liip/functional-test-bundle": "^4.1",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.18",
