--- a/src/composer.json
+++ b/src/composer.json
@@ -31,6 +31,7 @@
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.3",
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
         "liip/functional-test-bundle": "^4.1",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.18",
