--- a/src/composer.json
+++ b/src/composer.json
@@ -32,6 +32,7 @@
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.3",
         "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "fzaninotto/faker": "^1.9",
         "liip/functional-test-bundle": "^4.1",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.18",
